# qap19-7-2

./: .gitignore  README.md  pyproject.toml
qap19_7_2/: api.py  app.py  settings.py
tests/: _test_pet_friends.py  conftest.py  settings.py  temp.py  test_get_api_key.py  test_get_pets.py  test_pet_friends.py  test_petstore.py  utils.py
utils/: utils.py
