[tool.poetry]
name = "qap19-7-2"
version = "0.1.0"
description = ""
authors = ["Mikhail Lyalin <mc.lyalin@gmail.com>"]
readme = "README.md"
packages = [{include = "qap19_7_2"}]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.28.1"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
